--- a/style.css
+++ b/style.css
@@ -1223,6 +1223,13 @@ li , a{
     display: none !important;
 }
 
+.info{
+    width: 380px;
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    
+}
 /* #sectionMerchandise{
     width: 100%;
     height: 100vh;
