--- a/style.css
+++ b/style.css
@@ -995,52 +995,89 @@ li , a{
 
 
 /* ///////////////////////ESTILO MAIN ENTRADA ////////////// */
+
+#mainEntrada{
+    min-height: 750px;
+}
+
+.secBotones{
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    padding: 0px 30px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    div{
+        border: 1px solid white;
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: left;
+    }
+}
+#divCarrito{
+    background-color: blue;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#contenedorCarrito{
+    border: 1px solid black;
+    background-color:black;
+    color: white;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.tarjetaEntradaCarrito{
+    margin-top: 10px;
+    width: 10px;
+    height: 100px; 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    h3 , p {
+        margin: 0px 70px;      
+    }
+    button {
+        margin: 0px 70px;       
+    };
+}
+
+.oculto {
+    display: none !important;
+}
+#botonVerOcultar{
+    width: 220px;
+}
+#bBusqueda{
+    width: 150px;
+}
+
 #sectionEntradas{
     width: 100%;
-    height: 1500px;
-    /* background-color: rgb(178, 223, 178); */
+    min-height: 350px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 
 }
-/* .ticketsEntradas { */
-    /* h3{
-        color: red;
-    } */
-    /* border: thin solid black;
-    width: 300px;
-    height: 300px;
-    margin-left: 70px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding-top: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around; */
-/* } */
  img {
     width: 100px;
  }
-/* .ticketsEntradas h3{
-    background-color: darksalmon;
- }  */
 
 
-.ticketsEntradasBajaDisponibilidad{
-    color: rgb(253, 161, 13);
-    
-
-   
- }
-.ticketsEntradasAgotadas{
-    color: red;
-    button{ display: none !important;
-
-    }
-}
 .ticketsdia1{
     
     background: linear-gradient(rgba(241, 243, 246, 0.6), rgba( 5, 7, 12, 0.85)), url(img/CHRISTOP\ ERRE.jpg);
@@ -1050,15 +1087,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1073,15 +1119,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1097,15 +1152,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1121,15 +1185,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1145,15 +1218,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1168,15 +1250,24 @@ li , a{
     width: 300px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
@@ -1192,36 +1283,40 @@ li , a{
     width: 900px;
     height: 350px;
     border: thin solid black;
+    color: black;
     border-radius: 5%;
     margin-left: 70px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 55px;
     font-size: 20px;
-    box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50);
+    /* box-shadow: 0px 15px 20px rgb(254, 252, 252, 0.50); */
     h3{
         font-size: 38px;
+    }
+    button{
+        margin-bottom: 50px;
+        background-color: rgb(225, 225, 4);
+        border-radius: 10px;
+        font-size: medium;
+        width: 230px;
+        
     }
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around
 }
-
-#contenedorCarrito{
-    border: 1px solid black;
-    background-color: burlywood;
-    width: 100%;
-    height: 150px;
-}
-.tarjetaEntradaCarrito{
-    display: flex;
-    justify-content: space-between;
+.ticketsEntradasBajaDisponibilidad{
+    color: rgb(253, 161, 13);
+ }
+.ticketsEntradasAgotadas{
+    color: red;
+    button{ display: none !important;
+    }
 }
 
-.oculto {
-    display: none !important;
-}
+
 
 .info{
     width: 380px;
